--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -262,6 +262,9 @@ h6 {
   color: #fff;
 }
 
+.logo{
+  width:100%;
+}
 /**
 * Mobile Navigation 
 */
@@ -284,6 +287,10 @@ h6 {
 
   .navbar ul {
     display: none;
+  }
+
+  .img-logo{
+    width:80%;
   }
 }
 
